tests/fixtures/stl/errors/test_search_cat_in_record.stl
// Error: flow/queue search category is not valid inside a record
// expect-error: is only valid at file or prompt scope, not inside a record
record R {
  is { x is text<length=4>; }
  search { flow.x is 3; }
}
prompt p { is { y is R; } return { use y; } }
export p as main;
